# bxTemplate

./: .clang-format  CMakeLists.txt  README.md  addon.json  bxTemplate.cpp  bxTemplate.h
